[package]
name = "spacial-audio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.158"
nix = {version = "0.29.0", features=["fs"]}
tokio = { version = "1.39.3", features = ["full"] }
tokio-macros = "=2.4.0"
