[package]
name = "spacial-audio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.27", features = ["http1", "server", "tcp"] }
random-string = "1.1.0"
serde = "1.0.217"
serde_json = "1.0.138"
tokio = { version = "1", features = ["full"] }
